# ontoprobe

./: .gitignore  flake.nix  pyproject.toml
data/: metrics.yml
data/causal/: daily_full_with_ground_truth.csv  daily_observable.csv
data/confirmatory/: trial_02a5cfac57e1.json  trial_067d7373410f.json  trial_0cd3cac08bed.json  trial_128ecba9ca60.json  trial_12c792f5f84b.json  trial_1389dde6ce18.json  trial_13a7f591cbdc.json  trial_17ae068da4f4.json  trial_1b9388dec371.json  (+73 more)
dbt_project/: dbt_project.yml  profiles.yml
docs/: ontology-guide.md
notebooks/: confirmatory.py  eda.html  eda.py
ontology/: causal_rules.ttl  ecommerce.ttl
ontology_inverted/: causal_rules.ttl  ecommerce.ttl
reports/: chain_comparison_report.md  confirmatory_protocol.md  confirmatory_protocol_v2.md  hop_comparison_report.md  hypothesis_testing_report.md  knowledge_format_comparison_report.md  llm_experiment_poc.md  ontology_effectiveness_report.md  theory_v2.md
scripts/: build_slides.py  measure_llm_prior.py  run_blind_scoring.py  run_confirmatory.py  run_phase10_inversion_ablation.py  run_phase11a_integrity_ablation.py  run_phase11b_haiku_replication.py  run_rootcause.py  run_rootcause_ablation.py  run_rootcause_concept_ablation.py  run_rootcause_format_ablation.py  run_rootcause_progressive_ablation.py  run_rootcause_progressive_concept_ablation.py  run_rootcause_property_ablation.py  run_rootcause_stat_ablation.py  run_rootcause_vip_ablation.py
slides/: ontoprobe_presentation.pptx
tests/: conftest.py  test_db_introspect.py  test_ontology_loader.py  test_semantic.py
(+231 files in other folders)
